--- a/SITE/index.qmd
+++ b/SITE/index.qmd
@@ -37,7 +37,7 @@ format:
 <ul>
   <li><b>Fase 1</b>: Levantamento e documentação das bases de dados primárias, coleta de metadados, licenças e documentação.</li>
   <li><b>Fase 2</b>: Análise preliminar (descritiva) de cada base e disponibilização à comunidade dos dados tratados e tabulados (csv, xlsx ou rdata), juntamente com a documentação de criação do dataframe e o dicionário dos dados.</li>
-  <li><b>Fase 3</b>: Desenvolvimento de pacotes (biliotecas) em R e Python com os dados auferidos, automatizando e otimizando o processo.</li>
+  <li><b>Fase 3</b>: Desenvolvimento de pacotes (biliotecas) em R e Python com os dados auferidos, automatizando e otimizando o processo de captura e análise de dados por pesquisadores e interessados.</li>
 </ul>
 
 <p> O principal objetivo é apoiar a pesquisa, o planejamento, a formulação de políticas e o desenho de mecanismos baseado em evidências, fortalecendo, assim, a gestão sustentável dos biomas ao tempo em que possibilita um desenvolvimento mais sustentável.</p>
