--- a/descritiva provisório/principal.qmd
+++ b/descritiva provisório/principal.qmd
@@ -1,44 +1,5 @@
----
-title: "Análise descritiva RAMT"
-format: html
----
 
-```{r} 
-#| echo: false
-#| message: false
-#| warning: false
-#| include: false
-
-library(tidyverse)
-library(geobr)
-library(ipeadatar)
-library(stringr)
-library(readr)
-library(sf)
-library(gtsummary)
-library(gt)
-
-df_analise <- st_read(
-  dsn   = "C:/Users/jodom/OneDrive/Área de Trabalho/df_classificado.gpkg",
-  layer = "df_classificado",
-  quiet = TRUE   # ou o nome de camada que você usou no st_write
-)
-
-df_eco1 <- df_analise |> select(-c("df", "desc_chave"))
-
-df_areas <- df_analise |>
-  mutate(
-    # 1. Calcula a área (retorna em m^2 [units])
-    area_m2 = st_area(geom),
-    
-    # 2. Converte para Hectares e remove o tipo 'units' para evitar erros em gráficos
-    area_ha_calculada = as.numeric(area_m2) / 10000
-  )
-
- df_joined <- df_analise 
- 
-```
-
+## Introdução
 ## 1.Sobre os dados
 
 Os dados dos RAMT (Relatórios de Análise do Mercado de Terras) são elaborados pelo INCRA a partir da análise de diferentes mercados de terras em todo o território nacional, sendo essas terras tratadas como zonas homogêneas. Estas zonas são *clusters* (agrupamentos homogêneos com características semelhantes) que, a partir de então, têm seu valor analisado tendo em vista o uso da terra e as dinâmicas desses diferentes mercados. Os *clusters* são formados com base em um conjunto de variáveis: vocação produtiva da terra, gestão econômica e atividades agrícolas, nível tecnológico e a concentração fundiária (tendo em vista o índice de Gini fundiário). A metodologia de clusterização adotada é a de Ward, criando uma árvore de clusters inicialmente que depois é diferenciada por meio de algoritmos de K-means. O tratamento estatístico pressupõe uma distribuição aproximadamente normal dentro da zona homogênea. Os índices de inflação são corrigidos segundo o IGP-DI. Esse procedimento de clusterização é feito dentro de uma superintendência regional do INCRA.
